<resources>
    <string name="app_name">Jakub Sobieraj 4pr T5</string>

    <!-- TextViews -->
    <string name="opacity_view">OPACITY</string>
    <string name="hue_view">HUE</string>
    <string name="rotation_view">ROTATION</string>

        <string name="rotate_x">X</string>
        <string name="rotate_y">Y</string>

        <string name="red">R</string>
        <string name="green">G</string>
        <string name="blue">B</string>

        <string name="opacity">100%</string>

    <!-- Buttons -->
    <string name="take_picture">Take a picture!</string>

    <!-- Image -->
    <string name="image_description">mainImage</string>

</resources>